--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,14 @@ buildscript {
     apply from: './dependencies.gradle'
 
     repositories {
-        google()
+        maven { url 'https://maven.aliyun.com/repository/google' }
         jcenter()
+        mavenCentral()
+        google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         maven { url 'https://maven.fabric.io/public' }
     }
 
@@ -18,9 +24,12 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+        google()
+        maven { url 'https://maven.google.com' }
     }
 }
 
