--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,9 +6,9 @@ ext.versions = [
         versionName       : "1.5",
 
         // Plugins
-        gradlePlugin      : "3.3.1",
+        gradlePlugin      : '3.3.2',
         googleServices    : "4.2.0",
-        fabric            : "1.27.0",
+        fabric            : "1.28.0",
         spotlessPlugin    : "3.17.0",
 
         // Kotlin
